# teamb-platform-control-board

./: .gitignore  CMakeLists.txt  README.md  TESTING.md  build.sh  run_tests.sh
EXAMPLE_APP/lib_teamb_handshake/: build_sample_app.sh
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/UTIL_DRVR/: HandshakeAdvancedTest.cpp  HandshakeTest.cpp
tests/unit_tests/mocks/: mock_common.c  mock_hal_comms.c  mock_hal_comms.h
